@@ -1,3 +1,8 @@
+2018-08-05  Morten Welinder  <terra@gnome.org>
+
+	* tests/test-quad.c: Try to make the tests work a bit better for
+	the excess-precision case, i.e., x86 in 32-bit mode.
+
 2018-08-03  Morten Welinder  <terra@gnome.org>
 
 	* goffice/goffice.c (libgoffice_init): Use g_type_ensure to avoid
